--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "react-scripts build && cp -R build ./../docs/",
+    "deploy": "react-scripts build && rm -r ./../docs/* && cp -R ./build/ ./../docs/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
