fixed the file upload, change env

--- a/client/package.json
+++ b/client/package.json
@@ -2,29 +2,31 @@
   "name": "my-divjoy-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://brocorp.site/brorender-site/",
+  "homepage": "https://brocrender.site/",
   "keywords": [
     "divjoy"
   ],
   "dependencies": {
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-router-dom": "5.2.0",
-    "react-router-bootstrap": "0.25.0",
-    "react-scripts": "4.0.2",
-    "react-hook-form": "6.15.1",
-    "node-sass": "4.14.1",
-    "react-bootstrap": "1.0.0-beta.16",
-    "bootstrap": "4.4.1",
-    "query-string": "6.13.8",
-    "history": "4.10.1",
+    "@analytics/google-analytics": "0.2.2",
     "analytics": "0.3.1",
-    "@analytics/google-analytics": "0.2.2"
+    "bootstrap": "4.4.1",
+    "history": "4.10.1",
+    "node-sass": "4.14.1",
+    "query-string": "6.13.8",
+    "react": "17.0.1",
+    "react-bootstrap": "1.0.0-beta.16",
+    "react-dom": "17.0.1",
+    "react-hook-form": "6.15.1",
+    "react-router-bootstrap": "0.25.0",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "4.0.2",
+    "universal-cookie": "^4.0.4",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "react-scripts build && rm -r ./../docs/* && cp -R ./build/ ./../docs/",
+    "deploy": "react-scripts build && rm -r ./../docs/* && cp -R ./build/ ./../docs/ && cp ./../CNAME ./../docs/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
