--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "my-divjoy-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://brocrender.site/",
+  "homepage": "https://brorender.site/",
   "keywords": [
     "divjoy"
   ],
