--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
     "analytics": "0.3.1",
     "bootstrap": "4.4.1",
     "history": "4.10.1",
+    "immer": "^8.0.1",
+    "merge-images": "^2.0.0",
+    "merge-images-v2": "^2.0.1",
     "node-sass": "4.14.1",
     "query-string": "6.13.8",
     "react": "17.0.1",
@@ -21,6 +24,7 @@
     "react-router-bootstrap": "0.25.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
+    "socket.io-client": "^4.1.3",
     "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2"
   },
