--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "query-string": "6.13.8",
     "react": "17.0.1",
     "react-bootstrap": "1.0.0-beta.16",
+    "react-cookie-consent": "^6.2.4",
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "6.15.1",
